<resources>
    <string name="app_name">Nutrition Analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="analyze">Analyze</string>
    <string name="ingredients_hints">1 cup rice,\n10 oz chickpeas</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="show_total_nutrition">Show Total Nutrition</string>
    <string name="total_nutrition_analysis">Total Nutrition Facts</string>
    <string name="amount_per_serving">Amount Per Serving: % Daily Value</string>
    <string name="total_fat">Total Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="total_carbohydrate">Total Carbohydrate</string>
    <string name="total_sugars">Total Sugars</string>
    <string name="protein">Protein</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string name="error_message_not_connected">Check your internet connection and retry again later.</string>
    <string name="error_message_wrong_ingredients">We cannot calculate the nutrition for some ingredients. Please check the ingredient spelling or if you have entered a quantities for the ingredients.</string>
</resources>